Bug 1540545 - Use consistent hit test options in AccessibleCaretManager. r=TYLin a=RyanVM

It's important to use the IgnoreRootScrollFrame for correct hit testing when
zoomed in or out on Android. The hit test in DragCaretInternal() was missing
this flag.

Differential Revision: https://phabricator.services.mozilla.com/D27636